--- a/src/_includes/archive.html
+++ b/src/_includes/archive.html
@@ -3,7 +3,7 @@
   <ul class="archive">
     {% for post in site.posts %}
     <li>
-      <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%Y-%m-%d" }}</time>
+      <time datetime="{{ post.date | date_to_string }}">{{ post.date | date: "%b %Y" }}</time>
       <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
     </li>
     {% endfor %}
