Add Google Analytics 4 to blog

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -44,6 +44,9 @@
     {% if site.sidebar and site.show_description %}
       <div class="hidden description">{{ site.description }}</div>
     {% endif %}
+    {% if jekyll.environment == 'production' %}
+      {% include analytics.html %}
+    {% endif %}
   </header>
   {{ content }}
 </html>
