--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -7,29 +7,46 @@
   <meta name="author" content="{{ page.author | default: site.author | escape }}">
   <meta name="generator" content="Jekyll v{{ jekyll.version }}">
   <link rel="canonical" href="{{ page.url | absolute_url }}">
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+  <link rel="manifest" href="/assets/images/site.webmanifest">
+  <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#00aba9">
+  <link rel="shortcut icon" href="/assets/images/favicon.ico">
+  <meta name="msapplication-TileColor" content="#00aba9">
+  <meta name="msapplication-config" content="/assets/images/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+
   {% if site.minimal %}
     <link rel="stylesheet" href="{{ "/assets/css/minimal.css" | relative_url }}">
   {% else %}
     <link rel="stylesheet" href="{{ "/assets/css/index.css" | relative_url }}">
   {% endif %}
   <link rel="stylesheet" href="{{ "/assets/css/classes.css" | relative_url }}">
+  
   {% if site.sidebar %}
     <link rel="stylesheet" href="{{ "/assets/css/sidebar.css" | relative_url }}" media="screen and (min-width: 70em)">
   {% endif %}
+  
   {% if site.plugins contains "jekyll-feed" %}
     <link rel="alternate" href="{{ site.feed.path | default: "/feed.xml" | relative_url }}" type="application/atom+xml" title="{{ site.title }}">
   {% endif %}
+  
   {% if page.mathjax or site.mathjax %}
     <link rel="stylesheet" href="{{ "/assets/katex/katex.min.css" | relative_url }}">
     <script defer src="{{ "/assets/katex/katex.min.js" | relative_url }}"></script>
     <script defer src="{{ "/assets/katex/contrib/mathtex-script-type.min.js" | relative_url }}"></script>
   {% endif %}
+  
   {% if site.comments.disqus_shortname and page.layout == "post" %}
     <script src="//{{ site.comments.disqus_shortname }}.disqus.com/embed.js" async></script>
   {% endif %}
+  
   {% if site.comments.isso_domain and page.layout == "post" %}
     <script data-isso="http://{{ site.comments.isso_domain }}" src="//{{ site.comments.isso_domain }}/js/embed.min.js"></script>
   {% endif %}
+  
   <header class="icons">
     {% unless site.show_title != true and site.navigation and site.external %}
       <a href="{{ "/" | relative_url }}" class="title">{{ site.title | escape }}</a>
@@ -47,6 +64,8 @@
     {% if jekyll.environment == 'production' %}
       {% include analytics.html %}
     {% endif %}
+
+
   </header>
   {{ content }}
 </html>
