--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -8,7 +8,7 @@
   <link rel="canonical" href="{{ page.url | absolute_url }}">
 
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
+    {%- include analytics.html -%}
   {%- endif -%}
 
   {%- include custom-head.html -%}
