--- a/src/_includes/menu.html
+++ b/src/_includes/menu.html
@@ -1,10 +1,11 @@
 {% if include.menu %}
   <nav>
   {% for item in include.menu %}
+    {%- assign class = nil -%}
     {%- assign node = site.pages | where: "name", item.file | first -%}
     {%- assign url = item.url | default: node.url -%}
     {%- assign title = item.title | default: node.title -%}
-    <a aria-label="{{ title }}" href="{{ url | relative_url }}" {% if url == page.url %}class="selected"{% endif %}>
+    <a aria-label="{{ title }}" href="{{ url | relative_url }}" {% if url == page.url %}class="selected" style="color: #68F"{% endif %}>
       {%- if item.icon and site.sidebar or include.icons == true -%}
         <svg aria-hidden="true" {% unless include.icons %}class="hidden"{% endunless %}><use xlink:href="{{ "/assets/fontawesome/icons.svg" | relative_url }}#{{ item.icon }}"></use></svg>
       {%- endif -%}
