Update light and dark base colours

--- a/src/assets/css/sidebar.sass
+++ b/src/assets/css/sidebar.sass
@@ -19,7 +19,7 @@ body > header
   position: fixed
   overflow: auto
   background: darken($dark, 2%)
-  color: #fff
+  color: #fbfbf8
   border: none
   box-shadow: none
   opacity: .98
