--- a/src/_sass/index.sass
+++ b/src/_sass/index.sass
@@ -3,8 +3,8 @@ $font-weight: 400 !default
 $heading-weight: 600 !default
 $line-height: 1.6 !default
 $link-color: #68f !default
-$dark: #1c1d22 !default
-$light: #ffffff !default
+$dark: #282c34 !default
+$light: #fbfbf8 !default
 
 @function reduce ($percent)
   @return rgba(mix($dark, $light), $percent / 100)
