--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -7,7 +7,7 @@
   <meta name="generator" content="Jekyll v{{ jekyll.version }}">
   <link rel="canonical" href="{{ page.url | absolute_url }}">
 
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
+  {%- if jekyll.environment == 'production' -%}
     {%- include analytics.html -%}
   {%- endif -%}
 
