Fix layout issues for mobile

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -4,10 +4,10 @@
   {%- include head.html -%}
 
   <body>
-
-    {%- include header.html -%}
-    {{ content }}
-
+    <article>
+      {%- include header.html -%}
+      {{ content }}
+    </article>
   </body>
 
 </html>
