--- a/src/assets/css/classes.sass
+++ b/src/assets/css/classes.sass
@@ -104,3 +104,10 @@
     width: 100%
 
 {% endunless %}
+
+.lang-tag
+  width: 35px;
+  margin: 0;
+  vertical-align: middle;
+  padding-bottom: 7px;
+  padding-left: 5px;
