Fix css syntax issue

--- a/src/assets/css/classes.sass
+++ b/src/assets/css/classes.sass
@@ -106,8 +106,8 @@
 {% endunless %}
 
 .lang-tag
-  width: 35px;
-  margin: 0;
-  vertical-align: middle;
-  padding-bottom: 7px;
-  padding-left: 5px;
+  width: 35px
+  margin: 0 0 0 0
+  vertical-align: middle
+  padding-bottom: 7px
+  padding-left: 5px
