Update canvas width to fill 100% of parent element

--- a/src/_includes/game-of-life.html
+++ b/src/_includes/game-of-life.html
@@ -4,6 +4,6 @@
     <button id="run" style="background-color: mediumseagreen; color: whitesmoke;">▶</button>
     <audio id="tune" loop></audio>
     <br>
-    <canvas id="gameOfLife" style="border:1px solid #dfdfdf; max-width: calc(80% + 10em);" height="200px"></canvas>
+    <canvas id="gameOfLife" style="border:1px solid #dfdfdf; max-width: 100%;"></canvas>
     <script src="../assets/js/main.js"></script>
   </body>
