--- a/src/_includes/callout.html
+++ b/src/_includes/callout.html
@@ -1,1 +1,3 @@
 <div markdown="span" class="bs-callout bs-callout-{{include.type}}">{{include.content}}</div>
+
+<!-- Types of callouts: default, primary, success, danger, warning, info -->
