Change giscus script attributes

--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -29,14 +29,17 @@ layout: default
   {% comment %}
     Comments Section: https://giscus.vercel.app
   {% endcomment %}
-  <script src="https://giscus.vercel.app/client.js"
+  <script src="https://giscus.app/client.js"
           data-repo="tessapower/personal-website"
           data-repo-id="MDEwOlJlcG9zaXRvcnkyNjU3ODc4OTM="
+          data-category="General"
           data-category-id="MDE4OkRpc2N1c3Npb25DYXRlZ29yeTMyOTQyMjg3"
-          data-mapping="title"
-          data-theme="dark_dimmed"
+          data-mapping="url"
+          data-reactions-enabled="1"
+          data-theme="transparent_dark"
           crossorigin="anonymous"
-          async>
+          async
+  >
   </script>
 
 </article>
