Change colorscheme of giscus to preferred

--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -36,7 +36,7 @@ layout: default
           data-category-id="MDE4OkRpc2N1c3Npb25DYXRlZ29yeTMyOTQyMjg3"
           data-mapping="url"
           data-reactions-enabled="1"
-          data-theme="transparent_dark"
+          data-theme="preferred_color_scheme"
           crossorigin="anonymous"
           async
   >
