--- a/src/_sass/list.scss
+++ b/src/_sass/list.scss
@@ -2,11 +2,13 @@ ul.horizontal-list {
   display: flex;
   //justify-content: space-between;
   margin-top: 0em;
-  margin-left: -40px;
+  margin-left: -20px;
   flex-wrap: wrap;
+  justify-content: space-between;
 
   li {
-    display:inline;
+    display: inline;
+    list-style-type: none;
     margin-right: 1em;
   }
 
@@ -20,7 +22,7 @@ ul.horizontal-list {
 .card {
   padding: 1em;
   border: 1px var(--text) solid;
-  width: 11em;
+  width: calc(100% / 4);
   height: auto;
   text-align: center;
   font-size: 1em;
