--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -27,9 +27,13 @@
   <!-- Favicon -->
 
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
+
   {% if site.theme_config.appearance_toggle %}
     {% include toggle_theme_js.html %}
+
   {% endif %}
 
-  {%- include custom_head.html -%}
+  {% if site.theme_config.google_analytics %}
+    {% include analytics.html %}
+  {% endif %}
 </head>
