--- a/src/_includes/toggle_theme_js.html
+++ b/src/_includes/toggle_theme_js.html
@@ -1,31 +1,50 @@
 <script type="text/javascript">
-  window.addEventListener('load', themeChange);
-  const currentTheme = localStorage.getItem('theme') ? localStorage.getItem('theme') : null;
+  window.addEventListener('load', themeChangeButton);
+  window.addEventListener('load', function () {
+    if (localStorage.getItem("theme-setup") === null) {
+        transition();
+        setTheme('auto');
+        localStorage.setItem("theme-setup", true);
+    }
+  });
+
+  const currentTheme = ('theme' in localStorage) ? localStorage.getItem('theme') : null;
   if (currentTheme)
     document.documentElement.setAttribute('data-theme', currentTheme);
 
-  function themeChange() {
+
+  let setTheme = (theme) => {
+    if (theme === 'auto') {
+      if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        theme = 'dark';
+      } else {
+        theme = 'light';
+      }
+    }
+
+    document.documentElement.setAttribute('data-theme', theme);
+    localStorage.setItem('theme', theme);
+  }
+
+  let transition = () => {
+    document.documentElement.classList.add('transition');
+    window.setTimeout(() => {
+      document.documentElement.classList.remove('transition');
+    }, 1000);
+  }
+
+  function themeChangeButton() {
     let button = document.querySelector('.theme-toggle');
 
     button.addEventListener('click', function (e) {
       let currentTheme = document.documentElement.getAttribute('data-theme');
       if (currentTheme === 'dark') {
         transition();
-        document.documentElement.setAttribute('data-theme', 'light');
-        localStorage.setItem('theme', 'light');
+        setTheme('light');
       } else {
         transition();
-        document.documentElement.setAttribute('data-theme', 'dark');
-        localStorage.setItem('theme', 'dark');
+        setTheme('dark');
       }
     });
-
-    let transition = () => {
-      document.documentElement.classList.add('transition');
-      window.setTimeout(() => {
-        document.documentElement.classList.remove('transition');
-      }, 1000);
-    }
   }
 </script>
-
