Add support for tool tips in posts

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<link rel="stylesheet" href="/assets/css/tool_tips.css">
+
 {% if site.theme_config.show_navbar == true %}
   {% include horizontal_list.html collection=site.data.home.navbar_entries %}
   <div class="dashed"></div>
