Add support for better code blocks

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -28,6 +28,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
   <link rel="stylesheet" href="{{ "/assets/css/callout.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/copy-code.css" | relative_url }}">
 
   <!--FontAwesome-->
   <script src="https://kit.fontawesome.com/c09fe7955a.js" crossorigin="anonymous"></script>
