--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -73,5 +73,7 @@
         codeBlock.parentElement.outerHTML = `<pre class="mermaid">${codeBlock.textContent}</pre>`;
       });
     </script>
+
+    {% include copy-code.html %}
   </body>
 </html>
