--- a/docs/_sass/moonwalk.scss
+++ b/docs/_sass/moonwalk.scss
@@ -14,6 +14,7 @@ body {
 pre, code {
   font-family: "Roboto Mono", "Courier New", monospace;
   font-size: 0.9rem;
+  line-height: 1.4;
 }
 
 h2, h3, h4, h5 { margin-top: 1.5em; }
