--- a/docs/_includes/analytics.html
+++ b/docs/_includes/analytics.html
@@ -1,9 +1,2 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-gtag('config', '{{ site.google_analytics }}');
-</script>
+<script data-goatcounter="https://tessapower.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
