--- a/docs/_layouts/blog.html
+++ b/docs/_layouts/blog.html
@@ -3,7 +3,9 @@ layout: default
 ---
 
 {% if site.theme_config.show_navbar == true %}
-{% include horizontal_list.html collection=site.data.home.navbar_entries %}
+<nav class="site-nav">
+  {% include horizontal_list.html collection=site.data.home.navbar_entries %}
+</nav>
 <div class="dashed"></div>
 {% endif %}
 
@@ -25,8 +27,8 @@ layout: default
 {% endif %}
 
 {% if site.theme_config.show_footer == true %}
-  <footer>
-    <div class="dashed"></div>
-    {% include horizontal_list.html collection=site.data.home.footer_entries %}
-  </footer>
+<footer class="site-footer">
+  <div class="dashed"></div>
+  {% include horizontal_list.html collection=site.data.home.footer_entries %}
+</footer>
 {% endif %}
