--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -3,10 +3,12 @@ layout: default
 title: Home
 ---
 <header>
-{% if site.theme_config.show_navbar == true %}
-  {% include horizontal_list.html collection=site.data.home.navbar_entries %}
+  {% if site.theme_config.show_navbar == true %}
+  <nav class="site-nav">
+    {% include horizontal_list.html collection=site.data.home.navbar_entries %}
+  </nav>
   <div class="dashed"></div>
-{% endif %}
+  {% endif %}
 
   <h2>Hey, my name is Tessa.</h2>
   {% if site.theme_config.show_description == true %}
@@ -35,8 +37,8 @@ title: Home
 {% endif %}
 
 {% if site.theme_config.show_footer == true %}
-  <footer>
-    <div class="dashed"></div>
-    {% include horizontal_list.html collection=site.data.home.footer_entries %}
-  </footer>
+<footer class="site-footer">
+  <div class="dashed"></div>
+  {% include horizontal_list.html collection=site.data.home.footer_entries %}
+</footer>
 {% endif %}
