Minor tidyup and formatting

--- a/docs/_sass/list.scss
+++ b/docs/_sass/list.scss
@@ -52,7 +52,9 @@ ul.horizontal-list {
     display: block;
     margin-bottom: 1em;
     margin-left: 1em;
-    a, .header {
+
+    a,
+    .header {
       font-size: 1em;
     }
   }
