Fix bug where 1Password reprocesses code blocks with prism

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -74,6 +74,7 @@
       });
     </script>
 
+    {% include protect-code-blocks.html %}
     {% include copy-code.html %}
 
     {% include analytics.html %}
