--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -26,9 +26,11 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
-  <link rel="stylesheet" href="{{ "/assets/css/callout.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/assets/css/copy-code.css" | relative_url }}">
+  <link rel='stylesheet' href='{{ "/assets/css/main.css" | relative_url }}' />
+  <link rel='stylesheet'
+        href='{{ "/assets/css/callout.css" | prepend: site.baseurl }}'/>
+  <link rel="stylesheet"
+        href='{{ "/assets/css/copy-code.css" | relative_url }}' />
 
   <!--FontAwesome-->
   <script src="https://kit.fontawesome.com/c09fe7955a.js" crossorigin="anonymous"></script>
@@ -37,9 +39,15 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js" onload="renderMathInElement(document.body);"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js" onload="renderMathInElement(document.body, {
+    delimiters: [
+      {left: '$$', right: '$$', display: true},
+      {left: '$', right: '$', display: false}
+    ],
+    ignoredTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+    });"></script>
 
   {% if site.theme_config.appearance_toggle %}
     {% include toggle_theme_js.html %}
-
   {% endif %}
 </head>
