Add service worker to cache images

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -43,4 +43,10 @@
   {% if site.theme_config.appearance_toggle %}
     {% include toggle_theme_js.html %}
   {% endif %}
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js');
+    }
+  </script>
 </head>
